Preferences example and theme mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="mainfragment">HOME</string>
     <string name="userlist">User List</string>
     <string name="profilelistfragment">Profile List</string>
+    <string name="preference">Preference</string>
+    <string name="theme">Theme</string>
 </resources>
